--- a/style.css
+++ b/style.css
@@ -3,11 +3,19 @@ body,h1,h2,h3,p,quote,small,form,input,ul,li,ol,label{
     margin:0px;
     padding:0px;
 }
+body {
+	color: #444444;
+	font-size: 13px;
+	background: #f2f2f2;
+}
 .main {
 	width:920px;
 	margin: 30px auto;
 	text-align: center;
 	box-shadow: 0 0 3px #AAAAAA;
+}
+.gallery {
+	border: 1px solid white;
 }
 .slides {
 	border: 1px solid red;
@@ -22,14 +30,26 @@ body,h1,h2,h3,p,quote,small,form,input,ul,li,ol,label{
 .menu {
 	height: 45px;
 }
+ul {
+	margin: 0px;
+	padding: 0px;
+
+}
 li {
 	width: 60px;
 	height: 45px;
 	display: inline-block;
 	list-style: none;
+	overflow: hidden;
+}
+li.inact:hover {
+	background: url(img/pic_bg.png) repeat;
+}
+li.act, li.act:hover {
+	background: url(img/active_bg.png);
 }
 .fbar {
-	border: 1px solid black;
+	
 	width: 2px;
 	background: url(./img/divider.png) no-repeat right;
 }
